# CoreMaker-01

./: .gitignore  .gitmodules  0001-Add-OPL1000-driver.patch  AHT10.cpp  CMakeLists.txt  DebounceIn.cpp  DebounceIn.h  LICENSE.txt  README.md  custom_targets.json  global.h  jWrite.h  lightEffect.hpp  main.cpp  mbed-os.lib  mbed_app.json  sdcard_example.cpp  wifi_example.cpp
SensiML/: AIOT2101-simple-stream.ssf
TARGET_AIOT2101/: CMakeLists.txt  PinNames.h
docs/: README.md
docs/SDK/GPIO_motor sample code/: README.md  motor.cpp
docs/SDK/I2C_AHT10_sample code/: AHT10.cpp  README.md
docs/SDK/PWM_sample code/: PWM_LED.cpp  README.md
docs/SDK/Sensor_Sensiml_sample code/: AIOT2101-simple-stream_new.ssf  README.md  SensorHub(sgp30).cpp  SensorHub(sgp30).h  sgp30.cpp  sgp30.h
libsensiml/: kb.h  kb_debug.h  kb_defines.h  kb_typedefs.h  model.json  model_json.h  testdata.h
mbed-opl1000-patch/: 0001-Add-OPL1000-driver.patch  0002-Support-OPL1000A2-SDK-version-reference-is.patch
nvt_rs485/: CMakeLists.txt  MyUnbufferedSerial.cpp  MyUnbufferedSerial.h  nvt_rs485.cpp  nvt_rs485.h
sd_card/: NuSDBlockDevice.cpp  NuSDBlockDevice.h
sensors/: ADS131E.cpp  ADS131E.h  AcousticNode.cpp  AcousticNode.h  GMC306.cpp  GMC306.h  SensorHub.cpp  SensorHub.h
sensors/BME680/: bme680.cpp  bme680.h  bme680_defs.h  mbed_bme680.cpp  mbed_bme680.h
sensors/GMP102/: gmp102.cpp  gmp102.h  gmp102_defs.h  mbed_gmp102.cpp  mbed_gmp102.h  type_support.h
sensors/KX122-1037/: KX122.cpp  KX122.h  kx123_registers.h
